import { UUID } from './utils';

export interface POI {
  id: UUID;
  type: string;
  description: string;
}

